--- a/administration/templates/admin/ballot_position.html
+++ b/administration/templates/admin/ballot_position.html
@@ -1,11 +1,11 @@
 {% extends 'root.html' %}
 
-{% block head_title %} DUCSU | Ballot Position{% endblock %}
+{% block head_title %} DUCSU |  Ballot Position{% endblock %}
 
 {% block content %}
 <section class="content" style="max-height: 80vh; overflow-y: auto;">
   <div class="flex justify-center mb-2">
-    <h1 class="font-bold text-4xl text-blue-800">Ballot Position</h1>
+    <h1 class="font-bold text-4xl text-blue-800"> Change Ballot Position</h1>
   </div>
   <div class="row">
     <div class="col-xs-10 col-xs-offset-1" id="content">
@@ -29,6 +29,17 @@
       var desc = $(this).data('desc');
       $('.' + desc).iCheck('uncheck');
     });
+
+    $(document).on('click', '.platform', function (e) {
+      e.preventDefault();
+      $('#bio').modal('show');
+      var platform = $(this).data('bio');
+      var fullname = $(this).data('fullname');
+      $('.candidate').html(fullname);
+      $('#plat_view').html(platform);
+    });
+
+
 
     $(document).on('click', '.moveup', function (e) {
       e.preventDefault();
@@ -80,3 +91,25 @@
   }
 </script>
 {% endblock custom_js %}
+
+{% block modal %}
+
+<div class="modal fade" id="bio">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title"><b><span class="candidate"></b></h4>
+      </div>
+      <div class="modal-body">
+        <p id="plat_view"></p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-warning btn-flat pull-left" data-dismiss="modal"><i class="fas fa-times-circle"></i> Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+{% endblock modal %}
