--- a/administration/templates/admin/voters.html
+++ b/administration/templates/admin/voters.html
@@ -33,8 +33,8 @@
       <td>{% if voter.voted == True %}Yes{% else %}No{% endif %}</td>      
 
       <td>
-        <button class='btn btn-success btn-sm edit btn-flat' data-id='{{ voter.id }}'><i class='fa fa-edit'></i> Edit</button>
-        <button class='btn btn-danger btn-sm delete btn-flat' data-id='{{ voter.id }}'><i class='fa fa-trash'></i> Delete</button>
+        <button class='btn btn-success btn-sm edit btn-flat' data-id='{{ election.id }}'><i class="fas fa-edit fa-sm"></i> Edit</button>
+        <button class='btn btn-danger btn-sm delete btn-flat' data-id='{{ election.id }}'><i class="fas fa-trash-alt fa-sm"></i>Delete</button>
       </td>
     </tr>
     {% endfor %}      
@@ -75,8 +75,8 @@
             
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default btn-flat pull-left" data-dismiss="modal"><i class="fa fa-close"></i> Close</button>
-            <button type="submit" class="btn btn-success btn-flat" name="edit"><i class="fa fa-check-square-o"></i> Update</button>
+            <button type="button" class="btn btn-warning btn-flat pull-left" data-dismiss="modal"><i class="fas fa-times-circle"></i> Close</button>
+            <button type="submit" class="btn btn-success btn-flat" name="edit"><i class="fas fa-save"></i> Update</button>
             </form>
           </div>
       </div>
@@ -102,8 +102,9 @@
               </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default btn-flat pull-left" data-dismiss="modal"><i class="fa fa-close"></i> Close</button>
-            <button type="submit" class="btn btn-danger btn-flat" name="delete"><i class="fa fa-trash"></i> Delete</button>
+            <button type="button" class="btn btn-default btn-flat pull-left" data-dismiss="modal"><i
+              class="fa fa-close"></i> Close</button>
+          <button type="submit" class="btn btn-danger btn-flat" name="delete"><i class="fa fa-trash"></i> Delete</button>
             </form>
           </div>
       </div>
