--- a/administration/templates/admin/votes.html
+++ b/administration/templates/admin/votes.html
@@ -11,7 +11,7 @@
 <div class="col-xs-12">
 <div class="box">
   <div class="box-header with-border">
-    <a href="#reset" data-toggle="modal" class="btn btn-danger btn-sm btn-flat"><i class="fa fa-refresh"></i> Reset</a>
+    <a href="#reset" data-toggle="modal" class="btn btn-danger btn-sm btn-flat"><i class="fas fa-redo"></i> Reset</a>
   </div>
 <div class="box-body">
   <table id="example1" class="table table-bordered">
@@ -59,8 +59,8 @@
             </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default btn-flat pull-left" data-dismiss="modal"><i class="fa fa-close"></i> Close</button>
-            <a href="{% url 'resetVote' %}" class="btn btn-danger btn-flat"><i class="fa fa-refresh"></i> Reset</a>
+            <button type="button" class="btn btn-warning btn-flat pull-left" data-dismiss="modal"><i class="fas fa-times-circle"></i> Close</button>
+            <a href="{% url 'resetVote' %}" class="btn btn-danger btn-flat"><i class="fas fa-redo"></i> Reset</a>
           </div>
       </div>
   </div>
