--- a/voting/templates/voting/voter/ballot.html
+++ b/voting/templates/voting/voter/ballot.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <section class="content" style="max-height: 80vh; overflow-y: auto;">
-  <h1 class="page-header text-center title"><b>{{ TITLE }}</b></h1>
+  <h1 class="page-header text-center title"><b>{{ election.title }}</b></h1>
   <div class="row">
     <div class="col-sm-10 col-sm-offset-1">
 
@@ -20,10 +20,8 @@
     {{ ballot|safe }}
   </div>
   <div class="text-center">
-    <button type="button" class="btn btn-success btn-flat bg-green-500" id="preview"><i
-            class="fa fa-file-text"></i> Preview</button>
-    <button type="submit" class="btn btn-primary bg-blue-500 btn-flat" name="submit_vote"><i
-            class="fa fa-check-square-o"></i> Submit</button>
+    <button type="button" class="btn btn-success btn-flat bg-green-500" id="preview"><i class="fas fa-file-pdf fa-sm"></i></i> Preview</button>
+    <button type="submit" class="btn btn-primary bg-blue-500 btn-flat" name="submit_vote"><i class="fas fa-vote-yea fa-sm"></i></i> Submit</button>
 </div>
 </form>
     </div>
@@ -103,8 +101,7 @@
         <p id="plat_view"></p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default btn-flat pull-left" data-dismiss="modal"><i
-            class="fa fa-close"></i> Close</button>
+        <button type="button" class="btn btn-warning btn-flat pull-left" data-dismiss="modal"><i class="fas fa-times-circle"></i> Close</button>
       </div>
     </div>
   </div>
@@ -123,8 +120,7 @@
         <div id="preview_body"></div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default btn-flat pull-left" data-dismiss="modal"><i
-            class="fa fa-close"></i> Close</button>
+        <button type="button" class="btn btn-warning btn-flat pull-left" data-dismiss="modal"><i class="fas fa-times-circle"></i> Close</button>
       </div>
     </div>
   </div>
