--- a/voting/templates/voting/voter/result.html
+++ b/voting/templates/voting/voter/result.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <section class="content">
-  <h1 class="page-header text-center title"><b>{{ TITLE }}</b></h1>
+  <h1 class="page-header text-center title"><b>{{ election.title }}</b></h1>
 <div class="row">
 <div class="col-sm-10 col-sm-offset-1">
 
@@ -15,9 +15,9 @@ aria-hidden="true">&times;</button>
 </div>
 
 <div class="text-center">
-  <h3>You have already voted for this election.</h3>
-  <a href="#view" data-toggle="modal" class="btn btn-flat btn-primary btn-lg">View
-      Your Ballot</a>
+  <h2>You have already voted for this election.</h2>
+  <br>
+  <a href="#view" data-toggle="modal" class="btn btn-flat btn-success btn-lg">View Your Ballot</a>
 </div>
     </div>
   </div>
@@ -50,7 +50,7 @@ aria-hidden="true">&times;</button>
               </table>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default btn-flat pull-left" data-dismiss="modal"><i class="fa fa-close"></i> Close</button>
+            <button type="button" class="btn btn-warning btn-flat pull-left" data-dismiss="modal"><i class="fas fa-times-circle"></i>Close</button>
           </div>
       </div>
   </div>
